--- a/src/main/resources/static/web/pages/accounts.html
+++ b/src/main/resources/static/web/pages/accounts.html
@@ -50,7 +50,7 @@
                         </g>
                         
                         </svg>
-                    <p class=" lg:text-xl font-semibold text-gray-300 group-hover:text-white lg:mr-8" href="../index.html">Log Out</p>
+                    <p class=" lg:text-xl font-semibold text-gray-300 group-hover:text-white lg:mr-8" @click="logout()">Log Out</p>
                 </a>
             </div>
             <div class="flex items-center lg:hidden justify-between w-11/12">
@@ -155,8 +155,9 @@
                     <h4 class="font-medium text-lg text-slate-800">Creation Date: <span class="text-blue-950 font-bold">{{account.creationDate}}</span></h4>
                 </a>
             </template>
+            <button v-show="accounts.length < 3" @click="createAccount()" class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded">Create Account</button>
             <template v-if="loans.length == 0">
-                <a href="#" class="font-bold text-3xl text-slate-900 mt-3 lg:w-full lg:text-center lg:text-4xl">Would you like to apply for a loan?</a>
+                <a href="#" class="font-bold pt-10 lg:pb-20 text-3xl text-slate-900 mt-3 lg:w-full lg:text-center lg:text-4xl">Would you like to apply for a loan?</a>
             </template>
             <template v-else>
                 <h2 class="font-semibold text-3xl lg:text-3xl text-[#004481] mt-3 lg:w-11/12 lg:text-left">Loans</h2>
